--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,18 @@
   <groupId>com.javaclassloadingexample</groupId>
   <artifactId>java-class-loading-example</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <packaging>jar</packaging>
 
   <name>java-class-loading-example</name>
